# raindrop

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/engine/: Cargo.toml
crates/engine/src/: main.rs  scene_data.rs
crates/gfx_hal/: Cargo.toml
crates/gfx_hal/src/: device.rs  error.rs  instance.rs  lib.rs  physical_device.rs  queue.rs  surface.rs  swapchain.rs  sync.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/src/: lib.rs
crates/resource_manager/: Cargo.toml
crates/resource_manager/src/: error.rs  geo.rs  lib.rs  texture.rs
crates/rt-helper/: Cargo.toml
crates/rt-helper/src/: lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: error.rs  lib.rs
crates/shaders/: Cargo.toml
crates/shaders-shared/: Cargo.toml
crates/shaders-shared/src/: lib.rs
crates/shaders/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/vk-rs/: Cargo.toml  build.rs
crates/vk-rs/shaders/: main_fs.spv  main_vs.spv
crates/vk-rs/src/: main.rs  renderer.rs  texture_cache.rs
shaders/: frag.glsl.frag  main.frag  main.vert.glsl  vert.glsl.vert
