[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
gpu-allocator.workspace = true

gfx_hal = { path = "../gfx_hal" }
resource_manager = { path = "../resource_manager" }
