[package]
name = "vk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ash.workspace = true
color-eyre.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
cfg-if = "1.0.0"
cgmath = "0.18.0"
glam.workspace = true
gpu-allocator.workspace = true
egui-ash = { version = "0.4.0", features = ["gpu-allocator"] }
tobj = "4.0.2"
egui = "0.25.0"
ash-window = "0.12.0"

shaders-shared = { path = "../shaders-shared" }

[build-dependencies]
spirv-builder.workspace = true
